- Started on mockup of options page.

--- a/Code/manifest.json
+++ b/Code/manifest.json
@@ -18,5 +18,6 @@
 		"http://*/*",
 		"https://*/*"
 	],
-    "background_page": "background.html"
+    "background_page": "background.html",
+    "options_page": "options.html"
 }
